src/components/App.css
body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

.github-corner {
  position: absolute;
  top: 0;
  right: 0;
  border: 0;
}

.github-corner:hover .octo-arm {
  animation: octocat-wave 560ms ease-in-out;
}
@keyframes octocat-wave {
  0%,
  100% {
    transform: rotate(0);
  }
  20%,
  60% {
    transform: rotate(-25deg);
  }
  40%,
  80% {
    transform: rotate(10deg);
  }
}
@media (max-width: 500px) {
  .github-corner:hover .octo-arm {
    animation: none;
  }
  .github-corner .octo-arm {
    animation: octocat-wave 560ms ease-in-out;
  }
}

.App {
  text-align: center;
}

.App .invalid {
  background: rgba(193, 59, 56, 0.6);
  border-radius: 5px;
  color: #fff;
  font-size: 14px;
  font-weight: bold;
  padding: 10px;
}

.App-header {
  background-color: #333333;
  color: #fff;
  margin-bottom: 20px;
  padding: 30px;
}

.App-header-inner {
  display: flex;
  max-width: 960px;
  margin: auto;
}

.App-sliders span {
  align-items: center;
  color: #fff;
  margin-left: auto;
  margin-right: auto;
  max-width: 960px;
}

.App-header img {
  height: 40px;
  width: 52px;
  margin: -2px 20px;
}

.App-header h1 {
  display: inline-block;
  font-size: 2em;
  font-weight: bold;
  margin-bottom: 0;
  margin-top: 13px;
}

.App-main {
  box-sizing: border-box;
  margin: auto;
  max-width: 960px;
  padding: 30px 10px;
  width: 100%;
}

.App-main > svg {
  max-width: 100%;
}

/* EU */
.EU .App-main > svg {
  max-width: 50%;
}
.EU small {
  display: block;
}

.EU .party:after {
  display: none;
}

.App-main small {
  opacity: 0.4;
  font-size: 14px;
}

.App-settings {
  background: #333;
  color: #fff;
  padding-top: 40px;
  flex: 1;
  flex-flow: column;
}

.App-settings h2 {
  font-size: 24px;
  font-weight: bold;
  line-height: 28px;
}

.App-divider {
  padding: 20px;
  margin-bottom: 0px;
  max-width: 600px;
  display: flex;
  flex-flow: row;
}

.App-intro {
  font-size: large;
}

.App-summary {
  position: absolute;
  top: 210px;
  left: 10vw;
  right: 10vw;
  background: rgba(255, 255, 255, 0.8);
  height: 300px;
  margin: auto;
}

.App label {
  width: 50px;
  display: inline-table;
  color: #444;
}

.App {
  flex-flow: column;
  display: flex;
}

.App-sliders span {
  background: #333;
  flex: 1;
  display: flex;
  bottom: 0;
  position: -webkit-sticky;
  position: sticky;
  justify-content: space-between;
  text-align: center;
}

.LegendContainer {
  display: flex;
  margin: 15px 0;
  overflow-x: auto;
}

.LegendContainer > span {
  display: flex;
  flex-grow: 1;
}

.LegendContainer h1 {
  font-weight: 300;
  font-size: 16px;
  text-align: left;
  white-space: nowrap;
  margin: 0;
  color: #333;
  text-overflow: ellipsis;
  overflow: hidden;
}

.LegendContainer h2 {
  font-size: 16px;
  font-weight: bold;
  text-align: left;
  margin: 0;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  color: #333;
}

.LegendTitle {
  margin-bottom: 15px;
}

.LegendTitle h1,
.LegendTitle h2 {
  text-align: center;
  color: #333;
}

.LegendGroup span {
  display: block;
  border: 1px dashed #c1c1c1;
  padding: 5px;
}

.party {
  display: block;
  clear: both;
  background: #333;
  border-radius: 3px;
  padding: 10px;
  cursor: grab;
  margin: 5px;
  position: relative;
}

/*EU*/
.EU .wide {
  display: none;
}

.EU .small {
  display: block;
}

.party h1,
.party h2 {
  color: #fff;
  margin-left: 40px;
  margin-right: 30px;
}

.EU .party h1,
.EU .party h2 {
  margin-right: 3px;
}

.party.below {
  opacity: 0.5;
}

.party i {
  line-height: 10px;
  float: left;
  display: block;
}
.party i:before {
  content: '•';
  font-size: 120px;
  font-style: normal;
  position: absolute;
  top: 24px;
  left: 0;
}

.party:after {
  content: url(/images/drag-icon.svg);
  position: absolute;
  right: 15px;
  top: 24px;
}

.LegendGroup {
  flex: 1;
  transition: background ease-in 300ms;
}

.LegendGroup.Drop {
  background: #eee;
}

.party.selected {
  margin-left: -30px;
}

.small {
  display: none;
}

@media only screen and (max-width: 900px) {
  .App-main {
    max-width: 100%;
    padding: 0 20px;
  }

  .App-settings {
    padding: 0;
  }

  .App-header {
    padding: 20px 0;
  }

  .wide {
    display: none;
  }

  .small {
    display: block;
  }

  .App-sliders span {
    padding: 0;
  }
}

@media only screen and (max-width: 450px) {
  .LegendGroup span {
    padding: 2px;
  }

  .party {
    padding: 5px;
  }

  .party i:before {
    font-size: 100px;
    top: 20px;
  }

  .party:after {
    top: 20px;
  }

  .party h1,
  .party h2 {
    margin-left: 32px;
  }
}

@media only screen and (max-width: 350px) {
  .LegendGroup span {
    padding: 0;
  }

  .party h1,
  .party h2 {
    font-size: 14px;
    margin-left: 30px;
  }

  .party i:before {
    font-size: 80px;
    top: 17px;
  }

  .party:after {
    top: 17px;
    right: 11px;
  }
}

@media only screen and (max-width: 850px) {
  .App-sliders span {
    flex-direction: row;
    margin-left: 0;
    margin-right: 0;
    max-width: 100%;
    overflow-x: auto;
    position: sticky;
  }

  .App-main small {
    display: none;
  }

  .App-sliders > section {
    padding-top: 40px;
  }
}

